# pyemi

./: pyproject.toml
src/: math.py
src/pyemi/: cantera.py  math.py  math_finance.py  pandas.py  phd.py  plot.py  utils.py
