[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyemi"
version = "0.0.5"
authors = [
  { name="Emiliano Manuel Fortes Soplanes", email="emiliano.fortes@bsc.es" },
]
description = "Some functions I daily use"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emilianomfortes/pyemi"
"Bug Tracker" = "https://github.com/emilianomfortes/pyemi/issues"
